API Endpoints: POST Use of Mandatory Fields
